--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -8,7 +8,7 @@
         <article class="listProducto">
             <h2 class="alinearItem">LISTADO DE PRODUCTOS</h2>
             <h4 class="title_agregar">AGREGAR</h4>
-            <img class="img__mas" src="/img/icons/mdi_plus-box.svg" alt="simbolo + ">
+            <a href="/admin/create"><img class="img__mas" src="/img/icons/mdi_plus-box.svg" alt="simbolo + "></a>
         </article>
         <div style="margin-bottom: 30px;">
             <ul>
