--- a/src/views/partials/footerAdmin.ejs
+++ b/src/views/partials/footerAdmin.ejs
@@ -1,10 +1,10 @@
 <footer><!-- inicio footer seccion -->
-    <nav class="container">
+    <nav class="container footerFlex">
         <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
         <ul>
             <li><a href="/shop">SHOP</a></li>
-            <li><a href="/admin/register">REGISTRARSE</a></li>
-            <li><a href="/admin/login">INGRESAR</a></li>
+            <li><a href="/auth/register">REGISTRARSE</a></li>
+            <li><a href="/auth/login">INGRESAR</a></li>
             <li><a href="/contact">CONTACTO</a></li>
         </ul>
     </nav>
