--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 <footer><!-- inicio footer seccion -->
-    <nav class="container">
-        <img src="/img/branding/isotype.svg" alt="isotipo de la marca funco.com">
+    <nav class="container footerFlex">
+        <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
         <ul>
             <li><a href="/shop">SHOP</a></li>
-            <li><a href="/admin/login">INGRESAR</a></li>
+            <li><a href="/auth/login">INGRESAR</a></li>
             <li><a href="/contact">CONTACTO</a></li>
         </ul>
     </nav>
