--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -10,7 +10,7 @@
                <div class="first_filter">
                 <div >
                     <label class="filter_title" for="categoria" >Categoría:</label>
-                <select id="categoria" name="category_id" class="filter_dropdown">
+                <select id="categoria" name="category" class="filter_dropdown">
                     <option value="1">Figuras coleccionables</option>
                     <option value="2">Remeras</option>
                     <option value="3">Llaveros</option>
@@ -19,24 +19,22 @@
                 </div>
                 <div class="filters">
                     <label for="Licencia" class="filter_title">Licencia:</label>
-                <select id="Licencia" name="licence_id" class="filter_dropdown">
+                <select id="Licencia" name="licence" class="filter_dropdown">
                     <option value="1">Pokemon</option>
                     <option value="2">Star War</option>
                     <option value="3">Harry Potter</option>
                     <option value="4">Naruto</option>
                 </select>
-
                 </div>
-               </div>
-                
+               </div>             
           <div >
             <div >
                        <label class="filter_title" for="nombre del producto" class="complete_title">Nombre del producto:</label>
-                <input class="to_finish margen_large" type="text" name="producto_name" placeholder="Kakashi Hatake Shippuden Saga"/>
+                <input class="to_finish margen_large" type="text" name="name" placeholder="Kakashi Hatake Shippuden Saga"/>
                 </div>
           </div>
           <div >
-            <textarea class="product_descrip" name="product_description" rows="10" cols="40" placeholder="Descripción de producto"
+            <textarea class="product_descrip" name="description" rows="10" cols="40" placeholder="Descripción de producto"
                 ></textarea>
           </div>
           <div>
@@ -59,9 +57,7 @@
                     <option value="9">9 Cuotas sin interés</option>
                     <option value="12">Ahora 12</option>
                 </select>
-
-          </div>
-          
+          </div>        
           <div class="upload_image">
             <label for="imagen" class="complete_title">Imágenes:</label>
             <input type="file" name="images" class="files_button" id="img" multiple />
