se actualizo las rutas para agregar los nuevos items

--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -42,8 +42,8 @@
                 <input type="text" name="sku" placeholder="SSK111AB001" class="to_finish margen_medium" />
                 <label for="precio" class="complete_title">Precio:</label>
                 <input type="text" name="price" placeholder="$ 0.000,00" class="to_finish margen_medium" />
-                <label for="stock:" class="complete_title">Stock:</label>
-                <input type="text" name="stock:" placeholder="0" class="to_finish margen_small" />
+                <label for="stock" class="complete_title">Stock:</label>
+                <input type="text" name="stock" placeholder="0" class="to_finish margen_small" />
 
           </div>
           <div >
