--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -1,74 +1,69 @@
 <%- include('../partials/headerAdmin.ejs') %>
+  <main class="container"><!-- inicio cuerpo principal -->
+    <h2 class="create_title">CREAR NUEVO ITEM</h2>
+    <form action="/admin/create" method="post" class="filters" enctype="multipart/form-data">
+      <div class="first_filter">
+        <div>
+          <label class="filter_title" for="categoria">Categoría:</label>
+          <select id="categoria" name="category" class="filter_dropdown">
+            <option value="1">Figuras coleccionables</option>
+            <option value="2">Remeras</option>
+            <option value="3">Llaveros</option>
+          </select>
 
-    <main class="container"><!-- inicio cuerpo principal -->
-        
-            <h2 class="create_title">CREAR NUEVO ITEM</h2>
-        
-
-        
-            <form action="/admin/create" method="post" class="filters" enctype="multipart/form-data">
-               <div class="first_filter">
-                <div >
-                    <label class="filter_title" for="categoria" >Categoría:</label>
-                <select id="categoria" name="category" class="filter_dropdown">
-                    <option value="1">Figuras coleccionables</option>
-                    <option value="2">Remeras</option>
-                    <option value="3">Llaveros</option>
-                </select>
-
-                </div>
-                <div class="filters">
-                    <label for="Licencia" class="filter_title">Licencia:</label>
-                <select id="Licencia" name="licence" class="filter_dropdown">
-                    <option value="1">Pokemon</option>
-                    <option value="2">Star War</option>
-                    <option value="3">Harry Potter</option>
-                    <option value="4">Naruto</option>
-                </select>
-                </div>
-               </div>             
-          <div >
-            <div >
-                       <label class="filter_title" for="nombre del producto" class="complete_title">Nombre del producto:</label>
-                <input class="to_finish margen_large" type="text" name="name" placeholder="Kakashi Hatake Shippuden Saga"/>
-                </div>
-          </div>
-          <div >
-            <textarea class="product_descrip" name="description" rows="10" cols="40" placeholder="Descripción de producto"
-                ></textarea>
-          </div>
-          <div>
-            <label for="sku" class="complete_title">SKU:</label>
-                <input type="text" name="sku" placeholder="SSK111AB001" class="to_finish margen_medium" />
-                <label for="precio" class="complete_title">Precio:</label>
-                <input type="text" name="price" placeholder="$ 0.000,00" class="to_finish margen_medium" />
-                <label for="stock" class="complete_title">Stock:</label>
-                <input type="text" name="stock" placeholder="0" class="to_finish margen_small" />
-
-          </div>
-          <div >
-            <label class="complete_title" for="descuento" >Descuento:</label>
-            <input type="text" name="discount" placeholder="0%" class="to_finish margen_small" />
-            <label for="cuotas" class="complete_title">Cuotas:</label>
-            <select id="cuotas" name="dues" class="way_to_pay">
-                    <option value="1">Sin cuotas</option>
-                    <option value="3">3 Cuotas sin interés</option>
-                    <option value="6">6 Cuotas sin interés</option>
-                    <option value="9">9 Cuotas sin interés</option>
-                    <option value="12">Ahora 12</option>
-                </select>
-          </div>        
-          <div class="upload_image">
-            <label for="imagen" class="complete_title">Imágenes:</label>
-            <input type="file" name="images" class="files_button" id="img" multiple />
-          </div>
-          <div class="btn_add_clean">
-            <input type="submit" value="Agregar Producto" class="action_btn"/>
-            <input type="reset" value="Limpiar" class="action_btn"/>
-          </div> 
+        </div>
+        <div class="filters">
+          <label for="Licencia" class="filter_title">Licencia:</label>
+          <select id="Licencia" name="licence" class="filter_dropdown">
+            <option value="1">Pokemon</option>
+            <option value="2">Star War</option>
+            <option value="3">Harry Potter</option>
+            <option value="4">Naruto</option>
+          </select>
+        </div>
+      </div>
+      <div>
+        <div>
+          <label class="filter_title" for="nombre del producto" class="complete_title">Nombre del producto:</label>
+          <input class="to_finish margen_large" type="text" name="name" placeholder="Kakashi Hatake Shippuden Saga" />
+        </div>
+      </div>
+      <div>
+        <textarea class="product_descrip" name="description" rows="10" cols="40"
+          placeholder="Descripción de producto"></textarea>
+      </div>
+      <div>
+        <label for="sku" class="complete_title">SKU:</label>
+        <input type="text" name="sku" placeholder="SSK111AB001" class="to_finish margen_medium" />
+        <label for="precio" class="complete_title">Precio:</label>
+        <input type="text" name="price" placeholder="$ 0.000,00" class="to_finish margen_medium" />
+        <label for="stock" class="complete_title">Stock:</label>
+        <input type="text" name="stock" placeholder="0" class="to_finish margen_small" />
+      </div>
+      <div>
+        <label class="complete_title" for="descuento">Descuento:</label>
+        <input type="text" name="discount" placeholder="0%" class="to_finish margen_small" />
+        <label for="cuotas" class="complete_title">Cuotas:</label>
+        <select id="cuotas" name="dues" class="way_to_pay">
+          <option value="1">Sin cuotas</option>
+          <option value="3">3 Cuotas sin interés</option>
+          <option value="6">6 Cuotas sin interés</option>
+          <option value="9">9 Cuotas sin interés</option>
+          <option value="12">Ahora 12</option>
+        </select>
+      </div>
+      <div class="upload_image">
+        <label for="imagen" class="complete_title">Imágenes:</label>
+        <input type="file" name="images" class="files_button" id="img" multiple />
+      </div>
+      <div class="btn_add_clean">
+        <input type="submit" value="Agregar Producto" class="action_btn" />
+        <input type="reset" value="Limpiar" class="action_btn" />
+      </div>
     </form>
-    </main><!--fin cuerpo principal-->
+  </main><!--fin cuerpo principal-->
 
-    <%- include('../partials/footerAdmin.ejs') %>
-</body>
-</html>
+  <%- include('../partials/footerAdmin.ejs') %>
+    </body>
+
+    </html>
